--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/react": "^3.3.2",
     "@astrojs/svelte": "^5.4.0",
+    "@astrojs/tailwind": "^5.1.0",
     "@reduxjs/toolkit": "^2.2.3",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
@@ -29,6 +30,7 @@
     "@astrojs/node": "^8.2.5",
     "@babel/plugin-proposal-decorators": "^7.24.1",
     "freestyle-sh": "^0.1.27",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "tailwindcss": "^3.4.3"
   }
 }
